<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentOptionActivity">

    <TextView
        android:id="@+id/payment_method_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_title"
        />

    <TextView
        android:id="@+id/display_selected_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_method_title"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:id="@+id/radio_group_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_selected_home"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radiobtn_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/radiobtn_margin_top"
            />

        <RadioButton
            android:id="@+id/radiobtn_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radiobtn_cash"/>

        <RadioButton
            android:id="@+id/radiobtn_debit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radiobtn_credit_card"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_confirm_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_payment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>